--- a/OpenGl-3/OpenGl-3.vcxproj.filters
+++ b/OpenGl-3/OpenGl-3.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="technique.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
