--- a/OpenGl-3/OpenGl-3.vcxproj
+++ b/OpenGl-3/OpenGl-3.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="pipeline.h" />
     <ClInclude Include="technique.h" />
     <ClInclude Include="texture.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
